--- a/src/App.scss
+++ b/src/App.scss
@@ -3,6 +3,11 @@
 @import "src/style/home";
 @import "src/style/popular";
 @import "src/style/top_rated";
+@import "src/style/details";
+@import "src/style/actors";
+@import "src/style/actorDetails";
+@import "src/style/movieVideo";
+@import "src/style/search";
 
 * {
   margin: 0;
