--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -2,6 +2,8 @@
   background: rgb(2,0,36);
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
   border: 2px solid white;
+  position: sticky;
+  top: 0;
   .header {
     display: flex;
     align-items: center;
@@ -25,6 +27,10 @@
         font-weight: 700;
       }
     }
+    select {
+      padding: 5px 10px;
+      border-radius: 5px;
+    }
     &--btn {
       button {
         padding: 13px 20px;
@@ -38,6 +44,25 @@
         &:hover {
           transform: scale(1.1);
         }
+      }
+      input {
+        padding: 7px;
+        border-radius: 10px;
+        border: none;
+      }
+    }
+    &--dark {
+      display: flex;
+      button {
+        padding: 10px 10px;
+        border-radius: 10px;
+        margin: 0 5px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: black;
+        font-size: 20px;
+        cursor: pointer;
       }
     }
   }
