--- a/src/style/top_rated.scss
+++ b/src/style/top_rated.scss
@@ -13,7 +13,7 @@
     flex-wrap: wrap;
     gap: 3rem;
     &--card {
-      width: 29%;
+      width: 27.8%;
       border: 2px solid white;
       padding: 30px 0;
       border-radius: 20px;
@@ -25,6 +25,27 @@
         text-align: center;
         margin-top: 20px;
       }
+    }
+  }
+  .top--pages {
+    padding: 80px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    button {
+      width: 100px;
+      background: red;
+      color: white;
+      border-radius: 5px;
+      margin: 0 20px 0 0;
+      font-size: 20px;
+      cursor: pointer;
+      -webkit-box-shadow: 0 0 45px 10px rgba(255, 255, 255, 0.82);
+      -moz-box-shadow: 0 0 45px 10px rgba(255, 255, 255, 0.82);
+      box-shadow: 0 0 45px 10px rgba(255, 255, 255, 0.82);
+    }
+    h1 {
+      padding-top: 40px;
     }
   }
 }
